[gd_scene load_steps=5 format=3 uid="uid://cyokvghm1mjrp"]

[ext_resource type="PackedScene" uid="uid://m3v11vm16l8y" path="res://addons/parley/components/node/node_editor.tscn" id="1_4nlu2"]
[ext_resource type="Script" uid="uid://c5h33y8wso1fd" path="res://addons/parley/components/jump/jump_node_editor.gd" id="2_b1vft"]
[ext_resource type="PackedScene" uid="uid://dlqqxs60xui5w" path="res://addons/parley/components/editor/resource_editor.tscn" id="3_v37do"]
[ext_resource type="Texture2D" uid="uid://c4qx01xbrjp7h" path="res://addons/parley/assets/Edit.svg" id="4_x5loc"]

[node name="JumpNodeEditor" instance=ExtResource("1_4nlu2")]
script = ExtResource("2_b1vft")
dialogue_sequence_ast_ref = ""
type = 8

[node name="TitleLabel" parent="TitleContainer/TitlePanelContainer/TitleMarginContainer/TitlePartsContainer" index="0"]
text = "Jump [ID: ]"

[node name="HBoxContainer" type="HBoxContainer" parent="BodyMarginContainer/BodyScrollContainer/BodyContainer" index="0"]
layout_mode = 2

[node name="DialogueSequenceAstEditor" parent="BodyMarginContainer/BodyScrollContainer/BodyContainer/HBoxContainer" index="0" instance=ExtResource("3_v37do")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
key = "Dialogue Sequence"
base_type = "ParleyDialogueSequenceAst"

[node name="EditDialogueSequenceButton" type="Button" parent="BodyMarginContainer/BodyScrollContainer/BodyContainer/HBoxContainer" index="1"]
layout_mode = 2
tooltip_text = "Edit Action Script."
icon = ExtResource("4_x5loc")

[connection signal="resource_changed" from="BodyMarginContainer/BodyScrollContainer/BodyContainer/HBoxContainer/DialogueSequenceAstEditor" to="." method="_on_dialogue_sequence_ast_editor_resource_changed"]
[connection signal="pressed" from="BodyMarginContainer/BodyScrollContainer/BodyContainer/HBoxContainer/EditDialogueSequenceButton" to="." method="_on_edit_dialogue_sequence_button_pressed"]
